<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/darker_gray">

    <Button
        android:id="@+id/profile_pic"
        android:layout_width="148dp"
        android:layout_height="141dp"
        android:background="@drawable/round_button"
        android:text="@string/pic"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic"
        app:layout_constraintVertical_bias="0.128" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUpName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUpName"
        app:layout_constraintTop_toBottomOf="@+id/signUpName"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginBottom="64dp"
        android:autofillHints="@string/name"
        android:background="@drawable/round_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUpName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUpName"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUpName"
        app:layout_constraintStart_toStartOf="@+id/signUpPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <TextView
        android:id="@+id/acc_present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_acc"
        android:focusable="true"
        android:visibility="visible"
        android:clickable="true"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
        app:layout_constraintVertical_bias="0.222" />

</androidx.constraintlayout.widget.ConstraintLayout>